# testt_ci

./: environment.yml  pyproject.toml  setup.cfg
.github/workflows/: pipeline.yml
